Hibernate ORM - Generate proxies in parallel